Updated website content with a test message

--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Simple DevOps Project</title>
+    <title>My My Deployed Site</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to My Awesome Website!</h1>
+        <h1>Welcome to My Awesome Website!Auto-Deployed Site! (CI/CD Test)</h1>
     </header>
     <main>
-        <p>This website is automatically built and deployed using GitHub Actions.</p>
-        <p>Version: 1.0</p>
+        <p>This website is automatically built and deployed using GitHub Actions!Hooray!</p>
+        <p>This is my first DevOps project, and it's deploying automatically!</p>
     </main>
     <footer>
-        <p>© 2023 Your name</p>
+        <p>© 2025 Yukthi</p>
     </footer>
 </body>
 </html>
